--- a/assets/tools/index.html
+++ b/assets/tools/index.html
@@ -3,7 +3,7 @@
   <head>
     <title></title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="tabs">
@@ -30,6 +30,6 @@
       <div class="content ipfs"><iframe src="./ipfs/index.html"></iframe></div>
       <span class="close" onclick="closeMe()">×</span>
     </div>
-    <script src="./index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
