--- a/assets/tools/calc/index.html
+++ b/assets/tools/calc/index.html
@@ -5,17 +5,16 @@
         <title>calculator</title>
         <style>
         :root{
-          --theme: #fff;
+          --theme: #444;
         }
-body,html {
-    background: var(--theme);
+    body,html {
+    background: radial-gradient(circle at center,#afa4d4,#3e7cec);
     margin:0;
     width:100%;
     height:100%;
     overflow:auto;
     display:flex;
     align-items:center;
-    box-shadow:0 0 15px 3px rgba(0,0,0,0.3) inset;
     justify-content: center;
   }
   .container {
@@ -107,11 +106,6 @@ body,html {
              </div>
             </center>
             <script>
-            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-              document.querySelector(':root').style.setProperty('--theme', '#444');
-            } else {
-              document.querySelector(':root').style.setProperty('--theme', '#fff');
-            }
               var exp=window.output;
               function equal() {
               exp.value=exp.value.replace("×","*");
