--- a/assets/tools/format/index.html
+++ b/assets/tools/format/index.html
@@ -16,10 +16,10 @@
       <div id="editor"></div>
       <button onclick="tidy()">Format</button>
     </center>
-    <script src="../../assets/lib/ace/ace.js"></script>
-    <script src="../../assets/lib/tidy/beautify.js"></script>
-    <script src="../../assets/lib/tidy/beautify-css.js"></script>
-    <script src="../../assets/lib/tidy/beautify-html.js"></script>
+    <script src="/assets/plugins/ace/ace.js"></script>
+    <script src="/assets/plugins/tidy/beautify.js"></script>
+    <script src="/assets/plugins/tidy/beautify-css.js"></script>
+    <script src="/assets/plugins/tidy/beautify-html.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
