--- a/assets/tools/map/index.html
+++ b/assets/tools/map/index.html
@@ -9,16 +9,19 @@
         width:100%;
         height:100%;
         display:flex;
-        background:radial-gradient(circle at center,#afa4d4,#3e7cec);
+        background-image:radial-gradient(at center,#0cf,#05f);
         align-items:center;
+        box-shadow:0 0 15px 3px rgba(0,0,0,0.3) inset;
         justify-content:center;
       }
       .app{
         width:35%;
         min-width:320px;
         min-height:500px;
-        background:#444;
+        background:rgba(0,0,0,0.3);
         border-radius:10px;
+        box-shadow:0 0 15px 3px rgba(0,0,0,0.3) inset,
+        0 0 25px 5px rgba(0,0,0,0.3);
         color:#fff;
         display:flex;
         align-items:center;
