--- a/assets/tools/pcr/index.html
+++ b/assets/tools/pcr/index.html
@@ -5,17 +5,48 @@
     <meta name="" content="">
     <title></title>
     <style>
-      html,body{
-        background:radial-gradient(circle at center,#afa4d4,#3e7cec);
-        width: 100%;
-        height: 100%;
-      }
+      * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,html, .container {
+    background-image:radial-gradient(at center,#0cf,#05f);
+    margin:0;
+    width:100%;
+    height:100%;
+    overflow:auto;
+    display:flex;
+    align-items:center;
+    box-shadow:0 0 15px 3px rgba(0,0,0,0.3) inset;
+    justify-content: center;
+  }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding-top: 5em;
+}
+
+.container>input {
+  background: #2c3e50;
+  color: white;
+  border: none;
+  outline: none;
+  padding: 0.5em 0.75em;
+  cursor: pointer;
+  border-radius: 0.1em;
+}
+
     </style>
   </head>
   <body>
 <link rel="stylesheet" href="./monolith.min.css" type="text/css" media="all" />
 <section class="container">
-  <input style="display:none" type="button" value="Color Picker" class="pickr">
+  <input type="button" value="Color Picker" class="pickr">
 </section>
 
 <script src="./pickr.es5.min.js" type="text/javascript" charset="utf-8"></script>
@@ -26,22 +57,20 @@ const pickr = new Pickr({
   useAsButton: true,
   default: '#0099FF',
   theme: 'monolith',
-  swatches: ['#0099FF', '#F44336', '#E91E63', '#9C27B0', '#673AB7', '#00FFFF', '#FF5500', "#FFFF00"],
+  swatches: ['#0099FF', '#F44336', '#E91E63', '#9C27B0', '#673AB7', '#00FFFF', '#FF5500'],
   position: 'top-middle',
-  showAlways: true,
+  showAlways: false,
   components: {
     preview: true, opacity: true, hue: true,
     interaction: { hex: true, rgba: true, hsva: true, input: true, save: true}
   },
   i18n: {'btn:save': 'Copy'}
-});
-pickr.on('save', (color, pickr) => {
-  //inputElement.value = color.toHEXA().toString(0);
+}).on('save', (color, pickr) => {
+  inputElement.value = color.toHEXA().toString(0);
   pickr.getRoot().interaction.result.select();
   document.execCommand("copy");
-});
-pickr.getRoot().preview.lastColor.style.display="none"
-pickr.getRoot().preview.currentColor.style.width="100%"
+})
+  pickr.show();
 </script>
   </body>
 </html>
